@@ -1,5 +1,5 @@
 V1.2 Release Notes
-This version of the Wordpress NPR API Plugin will have changes to enhance our error messages when there are connectivity or permissions issues with your NPR API work.  We have also included the ability for admins to map custom Meta fields to certain Post fields that are pushed to the NPR API.  And finally, we've add the ability to retrieve transcripts for stories that have transcripts associated with them.
+This version of the Wordpress NPR API Plugin will have changes to enhance our error messages when there are connectivity or permissions issues with your NPR API work.  We have also included the ability for admins to map custom Meta fields to certain Post fields that are pushed to the NPR API. We've also added the ability to retrieve transcripts for stories that have transcripts associated with them.  Along with these changes we've add the saving of audio file urls for .m3u files of NPR stories pulled to your site.
 
 
 Better Error messages - We've gone through lots of our possible error scenarios when connecting with the NPR API.  For story pull we've moved our error messages to the UI to better keep the admin informed of possible issues.
@@ -12,3 +12,6 @@ Transcripts -  Many NPR API stories contain transcripts from the program segment
 Custom Post Types -  Now the NPR API Plug-in can use your custom post types.  We will also create a custom post type for stories pulled from the NPR API.  From the NPR API settings page (wp-admin/options-general.php?page=ds_npr_api) you can now select which post type you would like the plug-in to pull content into.  For your convenience we also created npr_story_post.  You do not have to use it.  You can also select which post type you will push to the NPR API.  If neither of these options are set, we will use the post, post type.
 
 Mapping Push Fields -  You can now map any custom fields to Title, Body and Byline for posts being pushed to the NPR API.  From the NPR API Field Mapping page (wp-admin/options-general.php?page=ds_npr_api_push_mapping) you can select which meta fields are used from your selected post type for push, to be sent to the API for Title, Body and Byline.  You can also leave this with the default setting, or not check the "Use Custom Settings" checkbox, and the plug-in will use the default WordPress fields.
+
+Audio -  We are now going to be saving a link to .m3u files for stories with audio.  It seems that not all .mp3 files are always available, but more often than not the .m3u files is available.  If there are more than one .mp3 or .m3u file for one story, they will be included in a coma separated list.  M3U files will be stored in the meta field named npr_audio_m3u.
+
